Fix landing page img proportions, was too big

--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,7 @@ section {
   align-items: center;
 }
 section img{
-  max-width: 50%;
+  max-width: 500px;
 }
 section h3 {
   margin-bottom: 0;
